--- a/public_html/index.html
+++ b/public_html/index.html
@@ -5,12 +5,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="robots" content="noindex, nofollow">
-  <title>Феникс гранит</title>
+  <title>Форма обратной связи</title>
 </head>
 
-<body>
-  <h2>Сайт компании Феникс-гранит находится в разработке.</h2>
-  <img src="9474995085.jpg" alt="logo">
+<body>  
   <div>
     <h3>Форма обратной связи</h3>
     <p>Оставьте номер телефона, и мы перезвоним в удобное для Вас время.</p>
